# ImageTranslator

./: .gitignore  CLAUDE.md  LICENSE  README.md  main.py  ocr.py  pyproject.toml  render.py  translate.py
tests/: conftest.py  test_main.py  test_ocr.py  test_render.py  test_runner.py  test_translate.py
tests/resources/: manga_evaluation.json
