[project]
name = "image-translate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.7"
dependencies = [
    "anthropic>=0.86.0",
    "google-genai>=1.68.0",
    "paddleocr>=3.4.0",
    "paddlepaddle==3.0.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "coverage>=7.13.5",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["ocr", "translate", "render"]
omit = ["tests/*", "main.py"]

[tool.coverage.report]
show_missing = true
